crates/parser/tests/parse/exports-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..87
  MODULE@0..86
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_EXPORT@10..26
      L_PAREN@10..11 "("
      KEYWORD@11..17 "export"
      WHITESPACE@17..18 " "
      NAME@18..20
        STRING@18..20 "\"\""
      WHITESPACE@20..21 " "
      ERROR@21..22 "("
      ERROR@22..24 "fu"
      ERROR@24..25 ")"
      R_PAREN@25..26 ")"
    WHITESPACE@26..29 "\n  "
    MODULE_FIELD_EXPORT@29..49
      L_PAREN@29..30 "("
      KEYWORD@30..36 "export"
      WHITESPACE@36..37 " "
      NAME@37..39
        STRING@37..39 "\"\""
      WHITESPACE@39..40 " "
      EXPORT_DESC_FUNC@40..48
        L_PAREN@40..41 "("
        KEYWORD@41..45 "func"
        WHITESPACE@45..46 " "
        ERROR@46..47 "$"
        R_PAREN@47..48 ")"
      R_PAREN@48..49 ")"
    WHITESPACE@49..52 "\n  "
    MODULE_FIELD_EXPORT@52..63
      L_PAREN@52..53 "("
      KEYWORD@53..59 "export"
      WHITESPACE@59..60 " "
      NAME@60..62
        STRING@60..62 "\"\""
      R_PAREN@62..63 ")"
    WHITESPACE@63..66 "\n  "
    MODULE_FIELD_EXPORT@66..84
      L_PAREN@66..67 "("
      KEYWORD@67..73 "export"
      WHITESPACE@73..74 " "
      NAME@74..76
        STRING@74..76 "\"\""
      WHITESPACE@76..77 " "
      EXPORT_DESC_FUNC@77..83
        L_PAREN@77..78 "("
        KEYWORD@78..82 "func"
        R_PAREN@82..83 ")"
      R_PAREN@83..84 ")"
    WHITESPACE@84..85 "\n"
    R_PAREN@85..86 ")"
  WHITESPACE@86..87 "\n"

error: expected export desc
  ┌─ exports-malformed.wat:2:14
  │
2 │   (export "" (fu))
  │              ^^^^

error: expected index (identifier or unsigned integer)
  ┌─ exports-malformed.wat:3:20
  │
3 │   (export "" (func $))
  │                    ^

error: expected export desc
  ┌─ exports-malformed.wat:4:13
  │
4 │   (export "")
  │             ^

error: expected index (identifier or unsigned integer)
  ┌─ exports-malformed.wat:5:19
  │
5 │   (export "" (func))
  │                   ^
